# RyczaltAI

./: README.md  config.py  constants.py  graph.py  main.py  pyproject.toml  raggema.py  rmvectordb.py  runryczalt.py  runvat.py  state.py
Nodes/: categorizer.py  inputtranslator_node.py  ryczalt_node.py  vat_node.py
RAG/: inputtranslator.py  ryczalt.py  vat.py
definition/: defenition_0.md  defenition_1.md  defenition_10.md  defenition_11.md  defenition_12.md  defenition_13.md  defenition_14.md  defenition_15.md  defenition_16.md  defenition_17.md  defenition_18.md  defenition_19.md  defenition_2.md  defenition_20.md  defenition_21.md  defenition_22.md  defenition_23.md  defenition_24.md  defenition_25.md  defenition_26.md  defenition_27.md  defenition_28.md  defenition_3.md  defenition_31.md  defenition_32.md  defenition_33.md  defenition_34.md  defenition_35.md  defenition_36.md  defenition_38.md  defenition_39.md  defenition_4.md  defenition_40.md  defenition_41.md  defenition_42.md  defenition_43.md  defenition_44.md  defenition_45.md  defenition_46.md  defenition_47.md  (+33 more)
ryczalt/: 1.md  16.md  17.md  21-p10.md  21-p11.md  21-p12.md  21-p13.md  21-p14.md  21-p2.md  21-p3.md  21-p4.md  21-p6.md  21-p7.md  21-p8.md  21-p9.md  21-part2.md  (+18 more)
ryczalt-db/: 10.md  11.md  12.md  15.md  1a.md  2.md  21.md  21c.md  21d.md  22.md  25.md  27.md  29.md  30.md  33.md  34.md  36.md  39.md  4.md  40.md  41.md  55.md  57aa.md  57f.md  6.md  8.md  9.md
ryczalt-definition/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  2.md  3.md  4.md  5.md  6.md  8.md  9.md
(+665 files in other folders)
